# rnnoise

./: .gitignore  CMakeLists.txt  README  build.bat  build_windows.bat  download_model.bat
cmake/: rnnoise-config.cmake.in
src/x86/: x86_dnn_map.c
